--- a/week3.ipynb
+++ b/week3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4yZWfS17DslLpf0pAJKKU",
+      "authorship_tag": "ABX9TyO9H/k/d3glSmYQxhgXmzyI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Praktikum"
+        "# Praktikum\n"
       ],
       "metadata": {
         "id": "pNafEMwnBjhZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Akses folder images pada Google Drive"
+      ],
+      "metadata": {
+        "id": "eSlBcGZKyHQ6"
       }
     },
     {
@@ -40,10 +49,10 @@
       "execution_count": 20,
       "metadata": {
         "id": "HQaIubGo975k",
-        "outputId": "81dff59f-884f-4e9b-bdfd-ad18fc01383a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "81dff59f-884f-4e9b-bdfd-ad18fc01383a"
       },
       "outputs": [
         {
@@ -59,6 +68,19 @@
         "\n",
         "drive.mount('/content/drive')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Melakukan transformasi linier brightness\n",
+        "\n",
+        "    Formula: 𝑔(𝑥, 𝑦) = 𝑓(𝑥, 𝑦) +  𝑏\n",
+        "\n",
+        "    𝑔(𝑥, 𝑦) adalah nilai pixel setelah transformasi, f(x,y) adalah nilai pixel asli, dan b adalah nilai brightness."
+      ],
+      "metadata": {
+        "id": "VKU_MVIlyCGE"
+      }
     },
     {
       "cell_type": "code",
@@ -90,12 +112,12 @@
         "cv2_imshow(final_frame)"
       ],
       "metadata": {
-        "id": "b1piCP78_VJg",
-        "outputId": "42ab8196-8fc3-400a-bf21-acb52f2f5676",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 325
-        }
+        },
+        "id": "b1piCP78_VJg",
+        "outputId": "42ab8196-8fc3-400a-bf21-acb52f2f5676"
       },
       "execution_count": 21,
       "outputs": [
@@ -156,12 +178,12 @@
         "cv2_imshow(final_frame)"
       ],
       "metadata": {
-        "id": "Jh9xqPCmBuCp",
-        "outputId": "cd6c62b3-b1dc-45aa-a9b5-492ff3d1f7c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 322
-        }
+          "height": 326
+        },
+        "id": "Jh9xqPCmBuCp",
+        "outputId": "cd6c62b3-b1dc-45aa-a9b5-492ff3d1f7c7"
       },
       "execution_count": 36,
       "outputs": [
@@ -227,12 +249,12 @@
         "cv2_imshow(final_frame)"
       ],
       "metadata": {
-        "id": "eKaARxWUOyX8",
-        "outputId": "2f81998d-e7f2-4dd2-b677-a91d34bad643",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 342
-        }
+        },
+        "id": "eKaARxWUOyX8",
+        "outputId": "2f81998d-e7f2-4dd2-b677-a91d34bad643"
       },
       "execution_count": 33,
       "outputs": [
@@ -292,12 +314,12 @@
         "cv2_imshow(final_frame)\n"
       ],
       "metadata": {
-        "id": "KSdbbOtXX35h",
-        "outputId": "6568b4a1-a267-420f-f34a-81473003a083",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 325
-        }
+        },
+        "id": "KSdbbOtXX35h",
+        "outputId": "6568b4a1-a267-420f-f34a-81473003a083"
       },
       "execution_count": 54,
       "outputs": [
@@ -353,12 +375,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "V-2JK1ecdzEP",
-        "outputId": "70fb5539-66dc-469b-c03d-deefc449c493",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
-        }
+        },
+        "id": "V-2JK1ecdzEP",
+        "outputId": "70fb5539-66dc-469b-c03d-deefc449c493"
       },
       "execution_count": 84,
       "outputs": [
@@ -416,12 +438,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "5LmycHfEkvMp",
-        "outputId": "67e57999-5e74-40cf-85d6-7e2bdf7071c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
-        }
+        },
+        "id": "5LmycHfEkvMp",
+        "outputId": "67e57999-5e74-40cf-85d6-7e2bdf7071c0"
       },
       "execution_count": 110,
       "outputs": [
@@ -476,12 +498,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "oF2XAUJjpXD8",
-        "outputId": "6bbb1c18-0a6d-4b99-8bfc-392b33778000",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
-        }
+        },
+        "id": "oF2XAUJjpXD8",
+        "outputId": "6bbb1c18-0a6d-4b99-8bfc-392b33778000"
       },
       "execution_count": 109,
       "outputs": [
@@ -552,12 +574,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "VM2s37Lgpsgf",
-        "outputId": "16c18f68-fec4-4860-cd45-60d5330b41e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
-        }
+        },
+        "id": "VM2s37Lgpsgf",
+        "outputId": "16c18f68-fec4-4860-cd45-60d5330b41e2"
       },
       "execution_count": 92,
       "outputs": [
