--- a/Week12.ipynb
+++ b/Week12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0bUI/b2GRwXmv5ZhuLRsB",
+      "authorship_tag": "ABX9TyPzAtkcIgXhG/vDGDvUyg3i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xbk1cdR5oGL6",
-        "outputId": "b234d623-7356-4cd3-e0d8-52f5bdbca619"
+        "outputId": "191d3fa5-e554-43e7-8302-2c921d1f2c07"
       },
       "outputs": [
         {
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "YbuytnfeorCB"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +86,7 @@
         "id": "B-HKMJTopWjg",
         "outputId": "7b9f0bb3-34f1-4e1f-d043-63426416a5be"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -122,7 +122,7 @@
         "id": "-LboNKaOp7qk",
         "outputId": "8d0c94cc-7aa9-4228-e483-2b6b2ee12f0d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -159,8 +159,7 @@
         "  cv.rectangle(kartini_img,(x,y),(x+w,y+h),(0,255,0),3)\n",
         "\n",
         "plt.subplot(121),plt.imshow(kartini),plt.axis('off')\n",
-        "plt.subplot(122),plt.imshow(kartini_img),plt.axis('off')\n",
-        ""
+        "plt.subplot(122),plt.imshow(kartini_img),plt.axis('off')\n"
       ],
       "metadata": {
         "colab": {
@@ -170,7 +169,7 @@
         "id": "slE9cI4xtKpL",
         "outputId": "0ceebb71-9353-4689-e4ee-72979cd5caae"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +218,7 @@
         "id": "QtRt5OuytRpJ",
         "outputId": "a0b6bbc4-f9d3-4f0b-ffae-3f1a43ddf692"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -267,7 +266,7 @@
         "id": "nfmGQDsStf0u",
         "outputId": "29f409e9-cc29-4675-b3ad-56f1c9a22696"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -315,7 +314,7 @@
         "id": "b9DdWuoUtls8",
         "outputId": "d6199019-f278-4a26-e285-0fc184ddcaac"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +366,7 @@
         "id": "5vE3VE3ttpHw",
         "outputId": "a46f4b75-95f5-45a4-c682-a05e7260ac9f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +414,7 @@
         "id": "Bm6-0CGatsTV",
         "outputId": "82fe99e7-516c-4188-ff10-4106799bf8c7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -457,7 +456,7 @@
       "metadata": {
         "id": "hXlyHnEZt__m"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -495,13 +494,12 @@
         "  # format return string\n",
         "  bbox_bytes = 'data:image/png;base64,{}'.format((str(b64encode(iobuf.getvalue()), 'utf-8')))\n",
         "\n",
-        "  return bbox_bytes\n",
-        ""
+        "  return bbox_bytes\n"
       ],
       "metadata": {
         "id": "XxlxaVZfuEju"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -512,7 +510,7 @@
       "metadata": {
         "id": "gOzAIMcouGRj"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -572,7 +570,7 @@
       "metadata": {
         "id": "8oI7G54OuI99"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -597,7 +595,7 @@
         "id": "n7eX8WXyuNu8",
         "outputId": "e4f2989b-a670-4cf4-ba60-3d0917e9c404"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -685,7 +683,7 @@
         "id": "SCl9zp4TuP50",
         "outputId": "06902ec9-5cd2-40ab-f3d8-622a0b34de47"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -769,7 +767,7 @@
         "id": "V3m7M-ovuSJj",
         "outputId": "8a235803-4cbe-4222-9d91-df6b4af582b6"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -818,7 +816,7 @@
         "id": "WRin-DaKuVWi",
         "outputId": "f144582c-1c56-4973-a96f-cb1b0c02e764"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,7 +894,7 @@
       "metadata": {
         "id": "Y0k59DpiuXlS"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -954,7 +952,7 @@
         "id": "mcLjAcDg31Un",
         "outputId": "25226644-d599-4588-bc39-683f54aa4395"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1046,7 +1044,7 @@
         "id": "sBbbH7AmuZaP",
         "outputId": "ce0271a4-34d0-4632-a8f2-7752df57a22b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1090,7 +1088,7 @@
         "id": "cwgFEJFFunkP",
         "outputId": "2adc57e7-6e87-40f1-8838-e6bf02eefa79"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1156,7 +1154,7 @@
       "metadata": {
         "id": "fMJyeJd4uqP9"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1165,47 +1163,42 @@
         "# Memuat gambar\n",
         "img_ktp = cv.imread('/content/drive/MyDrive/PCVK/KTP_More/KTP7.jpeg')\n",
         "\n",
-        "if img_ktp is None:\n",
-        "    print(\"Error: Gambar tidak ditemukan. Periksa path file.\")\n",
-        "else:\n",
-        "    # Preprocessing\n",
-        "    nik_gray = cv.cvtColor(img_ktp, cv.COLOR_BGR2GRAY)\n",
+        "cropped_img = img_ktp[70:100, 190:540]\n",
         "\n",
-        "    # Morfologi untuk memperbaiki struktur teks\n",
-        "    kernel = cv.getStructuringElement(cv.MORPH_RECT, (6, 2))\n",
-        "    img_nik = cv.morphologyEx(nik_gray, cv.MORPH_OPEN, kernel)\n",
+        "# Menggunakan gambar hasil cropping sebelumnya\n",
+        "img = cropped_img\n",
         "\n",
-        "    # Thresholding untuk mempertegas teks\n",
-        "    _, img_nik = cv.threshold(img_nik, 128, 255, cv.THRESH_BINARY)\n",
+        "# Menggunakan cv untuk GaussianBlur\n",
+        "blurred = cv.GaussianBlur(img, (5, 5), 0.5)\n",
         "\n",
-        "    # Menampilkan gambar hasil preprocessing\n",
-        "    plt.subplots(1)\n",
-        "    plt.imshow(img_nik, cmap='gray')\n",
-        "    plt.title('Hasil Preprocessing')\n",
-        "    plt.show()\n",
+        "# Mengubah gambar ke grayscale\n",
+        "gray = cv.cvtColor(blurred, cv.COLOR_BGR2GRAY)\n",
         "\n",
-        "    # Konfigurasi Tesseract\n",
-        "    custom_config = r'--oem 3 --psm 6 outputbase digits'\n",
-        "    print('-----------------------------------------')\n",
-        "    # Merubah gambar menjadi teks\n",
-        "    hasil = pytesseract.image_to_string(img_nik, config=custom_config)\n",
-        "    print(f'Hasil OCR => {hasil}')\n",
-        "    print('-----------------------------------------')\n"
+        "# Melakukan thresholding pada gambar grayscale\n",
+        "_, threshed = cv.threshold(gray, 128, 255, cv.THRESH_BINARY)\n",
+        "\n",
+        "# Menggunakan pytesseract untuk mengenali teks pada gambar threshold\n",
+        "custom_config = r'--oem 3 --psm 6 outputbase digits'\n",
+        "result = pytesseract.image_to_string(threshed, config=custom_config)\n",
+        "\n",
+        "# Menampilkan hasil pengenalan teks\n",
+        "print(\"NIK pada e-KTP:\", result)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wAiqgEmAupHq",
-        "outputId": "8846bf9d-cd55-47ff-ab05-0111d8c2639b"
+        "outputId": "9d8c3eca-7587-4d7f-c418-998dc1aca428"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Error: Gambar tidak ditemukan. Periksa path file.\n"
+            "NIK pada e-KTP: 7312042510720002\n",
+            "\f\n"
           ]
         }
       ]
